# learn-cpp

./: .clang-format  .gitattributes  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json
src/: CMakeLists.txt  main.cpp  math_utils.cpp  math_utils.h
tests/: CMakeLists.txt
